--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,5 @@
 body.login-page {
-  background-color: grey;
+  background-color: skyblue;
   display: flex;
   justify-content: center;
   align-items: center;
