--- a/Style.css
+++ b/Style.css
@@ -17,7 +17,7 @@ body.login-page {
 
 button {
   background-color: blue;
-  color: white;
+  color: blue;
   border: none;
   padding: 10px 20px;
   margin-top: 10px;
